[gd_scene load_steps=21 format=3 uid="uid://dkp68eu8mlvy"]

[ext_resource type="Script" uid="uid://cidtk0wuop31l" path="res://Enemies/Bat.gd" id="1_35xwv"]
[ext_resource type="Texture2D" uid="uid://b54ap3srnpr44" path="res://Enemies/Bat.png" id="1_pjxsn"]
[ext_resource type="Texture2D" uid="uid://dmws4eep0mt27" path="res://Shadows/SmallShadow.png" id="2_245xa"]
[ext_resource type="PackedScene" uid="uid://dog76awihrn7x" path="res://Overlap/hurt_box.tscn" id="3_r4ogl"]
[ext_resource type="PackedScene" uid="uid://b6d5lvic8uw0h" path="res://stats.tscn" id="5_nwy5c"]
[ext_resource type="PackedScene" uid="uid://b60nn2tis5v1s" path="res://Enemies/player_detection_zone.tscn" id="6_5xogs"]
[ext_resource type="PackedScene" uid="uid://bgcratw5k14oq" path="res://Overlap/hit_box.tscn" id="7_t8weg"]
[ext_resource type="PackedScene" uid="uid://bo4xbjryh6cjl" path="res://Overlap/soft_collision.tscn" id="8_mwqcb"]
[ext_resource type="PackedScene" uid="uid://drhnaw431qw3t" path="res://Enemies/wander_controller.tscn" id="9_ayffr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8ouur"]
atlas = ExtResource("1_pjxsn")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8835c"]
atlas = ExtResource("1_pjxsn")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdlbt"]
atlas = ExtResource("1_pjxsn")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5wk7"]
atlas = ExtResource("1_pjxsn")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_11ror"]
atlas = ExtResource("1_pjxsn")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_88t8o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ouur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8835c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdlbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5wk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11ror")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_thmqn"]
radius = 19.0476

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ib0qt"]
radius = 8.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t8weg"]
radius = 56.0803

[sub_resource type="CircleShape2D" id="CircleShape2D_mwqcb"]
radius = 5.09902

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ayffr"]
radius = 5.0
height = 10.0

[node name="Bat" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 17
script = ExtResource("1_35xwv")

[node name="AnimationSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_88t8o")
animation = &"Fly"
autoplay = "Fly"
frame = 3
frame_progress = 0.10337
offset = Vector2(0, -12)

[node name="ShdowSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_245xa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(-0.21, -0.21)
shape = SubResource("CircleShape2D_thmqn")

[node name="HurtBox" parent="." instance=ExtResource("3_r4ogl")]
visible = false
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_ib0qt")

[node name="Stats" parent="." instance=ExtResource("5_nwy5c")]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_5xogs")]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color(1, 1, 1, 0.301961)
shape = SubResource("CircleShape2D_t8weg")

[node name="HitBox" parent="." instance=ExtResource("7_t8weg")]
visible = false
collision_layer = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_mwqcb")

[node name="SoftCollision" parent="." instance=ExtResource("8_mwqcb")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource("CapsuleShape2D_ayffr")

[node name="WanderController" parent="." instance=ExtResource("9_ayffr")]

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="HurtBox"]
[editable path="PlayerDetectionZone"]
[editable path="HitBox"]
[editable path="SoftCollision"]
